hphp/test/zend/good/Zend/tests/errmsg_032.php.expectf

Fatal error: Constructor test::__construct() cannot be static in %s/errmsg_032.php on line 5
